--- a/server/cmd/server/Dockerfile
+++ b/server/cmd/server/Dockerfile
@@ -1,10 +1,13 @@
-# server/Dockerfile
 FROM golang:1.23-alpine AS builder
-COPY . /app
-WORKDIR /app/cmd/server
-RUN go build -o siem-server .
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o siem-server cmd/server/main.go
 
 FROM alpine:latest
-COPY --from=builder /app/cmd/server/siem-server .
+RUN apk --no-cache add ca-certificates tzdata
+WORKDIR /root/
+COPY --from=builder /app/siem-server .
 EXPOSE 8080
 CMD ["./siem-server"]
